# zerojudge-scraper

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  gen.sh
1. 七言對聯/: problem.md
1. 人力分配/: problem.md
1. 修補圍籬/: problem.md
1. 巴士站牌/: problem.md
1. 成績指標/: problem.md
1. 數字遊戲/: problem.md
1. 機械鼠/: problem.md
1. 特技表演/: problem.md
1. 程式交易/: problem.md
1. 程式考試/: problem.md
1. 購物車/: problem.md
1. 購買力/: problem.md
1. 路徑偵測/: problem.md
1. 遊戲選角/: problem.md
2. 人口遷移/: problem.md
2. 動線安排/: problem.md
2. 卡牌遊戲/: problem.md
2. 字串解碼/: problem.md
2. 流量/: problem.md
2. 特殊位置/: problem.md
2. 矩陣轉換/: problem.md
2. 蜜蜂觀察/: problem.md
2. 贏家預測/: problem.md
2. 造字程式/: problem.md
2. 運貨站/: problem.md
2. 電子畫布/: problem.md
2. 骰子/: problem.md
2. 魔王迷宮/: problem.md
201603_q4 血緣關係（單筆測資版）/: problem.md
202001_1 猜拳/: problem.md
202001_2 矩陣總和/: problem.md
202001_3 砍樹/: problem.md
202001_4 貨物分配/: problem.md
202109_3. 幸運數字（測資增強版）/: problem.md
3. 先加後乘與函數/: problem.md
3. 切割費用/: problem.md
3. 勇者修煉/: problem.md
3. 圓環出口/: problem.md
3. 幸運數字/: problem.md
3. 搬家/: problem.md
3. 數位占卜/: problem.md
3. 生產線/: problem.md
3. 石窟探險/: problem.md
3. 磁軌移動序列/: problem.md
3. 線段覆蓋長度/: problem.md
3. 缺字問題/: problem.md
3. 邏輯電路/: problem.md
3. 雷射測試/: problem.md
4. 低地距離/: problem.md
4. 內積/: problem.md
4. 合併成本/: problem.md
4. 投資遊戲/: problem.md
4. 最佳選擇/: problem.md
4. 機器出租/: problem.md
4. 牆上海報/: problem.md
4. 病毒演化/: problem.md
download/: README.md  pyproject.toml
download/src/download/: __init__.py  __main__.py
(+793 files in other folders)
