[package]
name = "zerojudge-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
eyre = "0.6.12"
fantoccini = { version = "0.21.2", features = ["rustls-tls"] }
futures = "0.3.30"
html2md = "0.2.14"
itertools = "0.13.0"
markdown = "0.3.0"
rayon = "1.10.0"
scraper = "0.20.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"
