[project]
name = "download"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aeon", email = "jerry73204@gmail.com" }
]
dependencies = [
    "selenium>=4.25.0",
    "pywebcopy>=7.0.2",
    "lxml[html_clean]>=5.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"download" = "download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/download"]
